[workspace]
members = ["./bonk", "./jito-protos"]
resolver = "2"

[workspace.dependencies]
clap = { version = "4.5.28", features = ["derive"] }
eyre = "0.6.12"
futures = "0.3.31"
solana-program = "=2.2"
solana-client = "=2.2"
solana-quic-client = "=2.2"
solana-sdk = "=2.2"
solana-system-interface = "1.0.0"
solana-perf = "=2.2"
solana-packet = "2.2.1"
solana-transaction-status-client-types = "=2.2"
tokio = { version = "1.39.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.19"
yellowstone-grpc-client = "6.0.0"
yellowstone-grpc-proto = { version = "6.0.0", features = ["plugin"] }
hex-literal = "1.0.0"
serde_json = "1.0.140"
hex = "0.4.3"
crossbeam-channel = "0.5.15"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json"] }
bincode = "1.3"
tonic = { version = "0.12.2", features = ["tls", "tls-roots", "tls-webpki-roots"] }
tonic-build = { version = "0.12.2" }
prost = "0.13"
prost-types = "0.13"
bytes = "1.4.0"
thiserror = "2.0.10"
futures-util = "0.3.31"